--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-Welcome to Josh Kraan's Personal Website!
-
-This website is currenty under construction, please check back later.
+Welcome to Josh Kraan's Personal Website! This website is currenty under construction, please check back later.
